# PLFantasyOptimizer

./: .gitignore  main.py  pyproject.toml
Entity/: Formation.py  Player.py  RunContext.py  Team.py  __init__.py
Enum/: ObjectiveType.py  Position.py  __init__.py
Optimizer/: MathModel.py
