[tool.poetry]
name = "plfantasyoptimizer"
version = "0.1.0"
description = ""
authors = ["Amir Ghahari <30395448+aghahari@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.3.10497"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
